# scrapy-books-scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt  scrapy.cfg
books_scraper/: scrapy.cfg  settings.py
books_scraper/books_scraper/: items.py  middlewares.py  settings.py
books_scraper/books_scraper/pipelines/: __init__.py  cleaning.py  storing.py
books_scraper/books_scraper/spiders/: book.py
books_scraper/pipelines/: storing.py
books_scraper/spiders/: book.py
booksscraper/: settings.py
booksscraper/pipelines/: cleaning.py  storing.py
proj/: dataset.json
proj/proj/spiders/: title.py
