[tool.poetry]
name = "scrapy-data-blogpost"
version = "0.1.0"
description = ""
authors = ["Vlada Dusek <v.dusek96@gmail.com>"]
readme = "README.md"
packages = [{ include = "books_scraper" }]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
psycopg = {extras = ["binary"], version = "^3.1.10"}

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.14.0"
flake8-datetimez = "^20.10.0"
flake8-docstrings = "^1.7.0"
flake8-encodings = "^0.5.0.post1"
flake8-isort = "^6.1.0"
flake8-noqa = "^1.3.2"
flake8-pyproject = "^1.2.3"
flake8-pytest = "^1.4"
flake8-quotes = "^3.3.2"
flake8-unused-arguments = "^0.0.13"
ipython = "^8.15.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pep8-naming = "^0.13.3"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 120

[tool.flake8]
docstring-convention = "all" # Google docstring convention + D204 & D401
filename = ["./src/*.py", "./tests/*.py"]
ignore = [
    "D",
    "D100",
    "D104",
    "D203",
    "D213",
    "D215",
    "D401",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "U101",
]
max_line_length = 120
per-file-ignores = ["tests/*: D"]
pytest-fixture-no-parentheses = true
pytest-mark-no-parentheses = true
unused-arguments-ignore-overload-functions = true
unused-arguments-ignore-stub-functions = true

[tool.isort]
include_trailing_comma = true
known_first_party = ["apify", "apify_client", "apify_shared"]
line_length = 120
multi_line_output = 3
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
use_parentheses = true

[tool.mypy]
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
error_summary = true
files = ["books_scraper"]                    # Todo: add "tests"
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
python_version = 3.11
show_absolute_path = false
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest]
asyncio_mode = "auto"
python_files = "test_*.py"
testpaths = "tests"
timeout = 1200
include_trailing_comma = true
