[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "scrapy-books-scraper"
version = "0.1.0"
description = ""
authors = ["Vlada Dusek <v.dusek96@gmail.com>"]
readme = "README.md"
packages = [{ include = "books_scraper" }]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
psycopg = { extras = ["binary"], version = "^3.1.10" }

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
ipython = "^8.15.0"
isort = "^5.12.0"
mypy = "^1.5.1"
ruff = "^0.1.2"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
include_trailing_comma = true
known_first_party = ["apify", "apify_client", "apify_shared"]
line_length = 120
multi_line_output = 3
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
use_parentheses = true

[tool.mypy]
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
error_summary = true
files = ["books_scraper"]          # Todo: add "tests"
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
python_version = 3.11
show_absolute_path = false
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest]
asyncio_mode = "auto"
python_files = "test_*.py"
testpaths = "tests"
timeout = 1200
include_trailing_comma = true

[tool.ruff]
line-length = 120
