[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "scrapy-books-scraper"
version = "0.1.0"
description = ""
authors = ["Vlada Dusek <v.dusek96@gmail.com>"]
readme = "README.md"
packages = [{ include = "books_scraper" }]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
psycopg = { extras = ["binary"], version = "^3.1.13" }

[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"
mypy = "^1.7.0"
ruff = "^0.1.6"

[tool.mypy]
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
error_summary = true
files = ["books_scraper"]          # Todo: add "tests"
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
python_version = 3.11
show_absolute_path = false
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest]
asyncio_mode = "auto"
python_files = "test_*.py"
testpaths = "tests"
timeout = 1200
include_trailing_comma = true

[tool.ruff]
line-length = 120
select = ["ALL"]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in {filename}
    "BLE001",  # Do not catch blind exception
    "COM812",  # This rule may cause conflicts when used with the formatter
    "D",       # pydocstyle
    "EM",      # flake8-errmsg
    "ISC001",  # This rule may cause conflicts when used with the formatter
    "FIX",     # flake8-fixme
    "PGH003",  # Use specific rule codes when ignoring type issues
    "PLR0913", # Too many arguments in function definition
    "PTH123",  # `open()` should be replaced by `Path.open()`
    "S",       #
    "TID252",  # Relative imports from parent modules are bannedRuff
    "TRY003",  # Avoid specifying long messages outside the exception class
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401", # Unused imports
]
"**/{scripts}/*" = [
    "D",       # Everything from the pydocstyle
    "INP001",  # File {filename} is part of an implicit namespace package, add an __init__.py
    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
    "T20",     # flake8-print
]
"**/{tests}/*" = [
    "D",       # Everything from the pydocstyle
    "INP001",  # File {filename} is part of an implicit namespace package, add an __init__.py
    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
    "T20",     # flake8-print
    "S101",    # Use of assert detected
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.isort]
known-first-party = ["apify", "apify_client", "apify_shared"]

[tool.ruff.lint.pydocstyle]
convention = "google"
